--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "Manjari Jain",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.4.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^5.13.0"
+    "express-session": "^1.17.2",
+    "mongoose": "^5.13.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
