--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Manjari Jain",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
     "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "^1.4.5",
