--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "kue": "^0.11.6",
     "mongoose": "^5.13.0",
+    "nodemailer": "^6.6.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
